--- a/.github/workflows/plantuml.yml
+++ b/.github/workflows/plantuml.yml
@@ -21,17 +21,17 @@ jobs:
           distribution: 'temurin'
           java-version: '11'
 
-      - name: Render all PlantUML files to SVG
+      - name: Render all PlantUML files to png
         uses: clarzu/plantuml-action@v2
         with:
           # Glob for all .puml files under uml/
           path: 'uml/**/*.puml'
-          format: svg
+          format: png
 
       - name: Commit generated diagrams
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add uml/**/*.svg
+          git add uml/**/*.png
           git diff --quiet || git commit -m "Auto-render PlantUML diagrams"
           git push
